--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-router-dom": "^6.1.0",
+    "react-scripts": "^4.0.3",
+    "react-select": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
