--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^16.6.3",
     "react-router-dom": "^6.1.0",
     "react-scripts": "^4.0.3",
